<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_dev">О приложении</string>
    <string name="alert_for_purchase" />
    <string name="app_ad_id">ca-app-pub-4811061307527681~8055481047</string>
    <string name="app_name">PrisonHack</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_ad_unit_id">ca-app-pub-4811061307527681/1956266111</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Отмена</string>
    <string name="cancel_prompt">Прекратить тестирование?</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="close_prompt">Закрыть приложение?</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text" />
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text" />
    <string name="common_google_play_services_install_title" />
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect">Соединение</string>
    <string name="correct_ans">Верный ответ:</string>
    <string name="default_text">Средний</string>
    <string name="default_web_client_id">371686262471-dnmvdi925citadm9k7c9vrn4imb7f75b.apps.googleusercontent.com</string>
    <string name="define_AndroidIconics">year;owner</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="define_materialdrawer">year;owner</string>
    <string name="define_materialize">year;owner</string>
    <string name="delete_all_notification">Удалить все уведомления?</string>
    <string name="details_text">Подробно</string>
    <string name="developer_detail" />
    <string name="developer_message">Данное приложение является сборником тестов по</string>
    <string name="developer_name">PrisonHack</string>
    <string name="dialog_purchase">In order to view this content, you need to unlock the full version by making a one time purchase.\10\10This will also remove advertisements throughout the app.</string>
    <string name="dialog_purchase_title">Content locked.</string>
    <string name="empty_result">Нет данных</string>
    <string name="exit">Выход</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_url">https://ru-ru.facebook.com/myinvestingvtb/posts/</string>
    <string name="failed">Ошибка</string>
    <string name="fastadapter_lib_version">3.2.4</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url" />
    <string name="gcm_defaultSenderId">371686262471</string>
    <string name="google_api_key" />
    <string name="google_app_id" />
    <string name="google_crash_reporting_api_key" />
    <string name="google_play_license" />
    <string name="google_plus">Google Play</string>
    <string name="google_plus_url">https://play.google.com/store/apps/details?id=ru.vtb.invest</string>
    <string name="google_storage_bucket">quizandroid-a4880.appspot.com</string>
    <string name="greeting_text1">Плохо. Подготовьтесь и пробуйте снова.</string>
    <string name="greeting_text2">Хорошо. Но могло быть еще лучше.</string>
    <string name="greeting_text3">Великолепно! Отличный результат!</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4811061307527681/2747314044</string>
    <string name="item_counter">%d / %d</string>
    <string name="large_text">Большой</string>
    <string name="library_AndroidIconics_author">Mike Penz</string>
    <string name="library_AndroidIconics_authorWebsite">http://mikepenz.com/</string>
    <string name="library_AndroidIconics_isOpenSource">true</string>
    <string name="library_AndroidIconics_libraryDescription">This library allows you to include vector icons everywhere in your project. No limits are given. Scale with no limit, use any Color at any time, provide a contour, and many additional customizations</string>
    <string name="library_AndroidIconics_libraryName">Android-Iconics</string>
    <string name="library_AndroidIconics_libraryVersion">3.0.3</string>
    <string name="library_AndroidIconics_libraryWebsite" />
    <string name="library_AndroidIconics_licenseId">apache_2_0</string>
    <string name="library_AndroidIconics_owner">Mike Penz</string>
    <string name="library_AndroidIconics_repositoryLink" />
    <string name="library_AndroidIconics_year">2017</string>
    <string name="library_fastadapter_author">Mike Penz</string>
    <string name="library_fastadapter_authorWebsite" />
    <string name="library_fastadapter_isOpenSource">true</string>
    <string name="library_fastadapter_libraryDescription">&lt;b&gt;FastAdapter&lt;/b&gt;, the bullet proof, fast and easy to use adapter library, which minimizes developing time to a fraction...</string>
    <string name="library_fastadapter_libraryName">FastAdapter</string>
    <string name="library_fastadapter_libraryVersion">@string/fastadapter_lib_version</string>
    <string name="library_fastadapter_libraryWebsite">https://github.com/mikepenz/FastAdapter</string>
    <string name="library_fastadapter_licenseId">apache_2_0</string>
    <string name="library_fastadapter_owner">Mike Penz</string>
    <string name="library_fastadapter_repositoryLink" />
    <string name="library_fastadapter_year">2018</string>
    <string name="library_materialdrawer_author">Mike Penz</string>
    <string name="library_materialdrawer_authorWebsite" />
    <string name="library_materialdrawer_isOpenSource">true</string>
    <string name="library_materialdrawer_libraryDescription">&lt;b&gt;MaterialDrawer&lt;/b&gt; the flexible, easy to use, all in one drawer library for your Android project.</string>
    <string name="library_materialdrawer_libraryName">MaterialDrawer</string>
    <string name="library_materialdrawer_libraryVersion">6.0.7</string>
    <string name="library_materialdrawer_libraryWebsite" />
    <string name="library_materialdrawer_licenseId">apache_2_0</string>
    <string name="library_materialdrawer_owner">Mike Penz</string>
    <string name="library_materialdrawer_repositoryLink" />
    <string name="library_materialdrawer_year">2018</string>
    <string name="library_materialize_author">Mike Penz</string>
    <string name="library_materialize_authorWebsite" />
    <string name="library_materialize_isOpenSource">true</string>
    <string name="library_materialize_libraryDescription">&lt;b&gt;Materialize&lt;/b&gt; comes with useful helper classes, the complete material color palette, and many additional utils. Use its theme as base. Let it manage your StatusBar, NavigationBar, Fullscreen behavior&amp;#8230;</string>
    <string name="library_materialize_libraryName">Materialize</string>
    <string name="library_materialize_libraryVersion">1.1.2</string>
    <string name="library_materialize_libraryWebsite">https://github.com/mikepenz/Materialize</string>
    <string name="library_materialize_licenseId">apache_2_0</string>
    <string name="library_materialize_owner">Mike Penz</string>
    <string name="library_materialize_repositoryLink">https://github.com/mikepenz/Materialize</string>
    <string name="library_materialize_year">2016</string>
    <string name="matches">matches</string>
    <string name="material_drawer_close">Close</string>
    <string name="material_drawer_open">Open</string>
    <string name="next_question">Следующий вопрос</string>
    <string name="no">Нет</string>
    <string name="no_internet">Интернет соединение недоступно!</string>
    <string name="notification_details">Содержание:</string>
    <string name="notification_title">Заголовок:</string>
    <string name="notifications">Уведомления</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="others">Others</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="play_again">Начать заново</string>
    <string name="read_post">Нажмите для прочтения</string>
    <string name="score">Верно</string>
    <string name="share_now">Поделиться</string>
    <string name="share_prompt">Поделитесь результатом!</string>
    <string name="skipped">Пропущено</string>
    <string name="title_post">Уведомление</string>
    <string name="wrong">Неверно</string>
    <string name="your_ans">Ваш ответ:</string>
</resources>