<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/toolbarTop" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/toolbar"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/toolbarTop">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:padding="@dimen/margin_15dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:id="@+id/img_dev" android:background="@drawable/ic_dev" android:focusable="true" android:clickable="true" android:layout_width="80dp" android:layout_height="80dp" android:onClick="clickView" android:contentDescription="@string/about_dev"/>
            <TextView android:textSize="20sp" android:textColor="@color/blue" android:gravity="center" android:id="@+id/tv_dev_title" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/developer_name" android:onClick="clickView"/>
            <TextView android:textSize="14sp" android:gravity="center" android:id="@+id/tv_dev_sub_title" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/developer_detail" android:onClick="clickView"/>
            <TextView android:textSize="15sp" android:id="@+id/tv_dev_text" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_15dp" android:layout_marginBottom="@dimen/margin_15dp" android:text="@string/developer_message" android:onClick="clickView"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
