<?xml version="1.0" encoding="utf-8"?>
<android.support.p003v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" android:foreground="?android:attr/selectableItemBackground" android:layout_marginStart="5dp" android:layout_marginEnd="5dp" app:cardBackgroundColor="@color/notification_card_bg" app:cardElevation="0dp" app:cardUseCompatPadding="true">
    <RelativeLayout android:padding="@dimen/margin_10dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_noti" android:layout_width="32dp" android:layout_height="32dp" android:src="@drawable/ic_noti_gray" android:scaleType="centerCrop" android:layout_centerVertical="true" android:contentDescription="@string/app_name" android:layout_marginEnd="5dp" android:layout_alignParentStart="true"/>
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toEndOf="@+id/img_noti">
            <TextView android:textSize="16sp" android:ellipsize="end" android:id="@+id/tv_noti_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_10dp" android:text="@string/title_post" android:maxLines="1"/>
            <TextView android:textSize="12sp" android:ellipsize="end" android:id="@+id/tv_noti_sub_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_10dp" android:layout_marginTop="@dimen/margin_3dp" android:text="@string/read_post" android:maxLines="2"/>
        </LinearLayout>
    </RelativeLayout>
</android.support.p003v7.widget.CardView>
