<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <android.support.p003v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_10dp" android:layout_marginTop="?attr/actionBarSize" android:layout_marginRight="@dimen/margin_10dp" app:cardBackgroundColor="@color/white" app:cardCornerRadius="5dp" app:cardElevation="1dp" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
        <ScrollView android:id="@+id/scrollView" android:layout_width="match_parent" android:layout_height="match_parent">
            <LinearLayout android:orientation="vertical" android:padding="@dimen/margin_10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notification_title"/>
                <TextView android:textSize="16sp" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_6dp"/>
                <TextView android:textSize="16sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_10dp" android:text="@string/notification_details"/>
                <TextView android:id="@+id/message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_6dp"/>
                <Button android:layout_gravity="end" android:id="@+id/btn_read" android:layout_width="match_parent" android:layout_height="@dimen/margin_40dp" android:layout_marginTop="@dimen/margin_20dp" android:text="@string/read_post"/>
            </LinearLayout>
        </ScrollView>
    </android.support.p003v7.widget.CardView>
</RelativeLayout>
